[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/credits.gd" type="Script" id=1]
[ext_resource path="res://fonts/Bungee-Shade.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Bungee-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/buttons/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/left-arrow.png" type="Texture" id=5]
[ext_resource path="res://scenes/FadeIn.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 18
font_data = ExtResource( 3 )

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.292358
margin_top = -1.0
margin_right = 0.292358
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="Tutorial Area" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 100.0
margin_right = -150.0
margin_bottom = -100.0
rect_min_size = Vector2( 300, 250 )

[node name="Label" type="Label" parent="Tutorial Area"]
margin_right = 780.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Credits"
align = 1

[node name="CenterBox" type="HBoxContainer" parent="Tutorial Area"]
margin_top = 61.0
margin_right = 780.0
margin_bottom = 400.0
size_flags_vertical = 3

[node name="Name" type="VBoxContainer" parent="Tutorial Area/CenterBox"]
margin_right = 388.0
margin_bottom = 339.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="David" type="Label" parent="Tutorial Area/CenterBox/Name"]
margin_right = 388.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Urodela"
valign = 1

[node name="Chris" type="Label" parent="Tutorial Area/CenterBox/Name"]
margin_top = 85.0
margin_right = 388.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Grognak"
valign = 1

[node name="Edgar" type="Label" parent="Tutorial Area/CenterBox/Name"]
margin_top = 170.0
margin_right = 388.0
margin_bottom = 251.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Deaths_head"
valign = 1

[node name="Tyler" type="Label" parent="Tutorial Area/CenterBox/Name"]
margin_top = 255.0
margin_right = 388.0
margin_bottom = 339.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "imgoinghamm"
valign = 1

[node name="URLS" type="VBoxContainer" parent="Tutorial Area/CenterBox"]
margin_left = 392.0
margin_right = 780.0
margin_bottom = 339.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Tutorial Area/CenterBox/URLS"]
margin_right = 388.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "https://github.com/dalisaydavid"
valign = 1

[node name="Label2" type="Label" parent="Tutorial Area/CenterBox/URLS"]
margin_top = 85.0
margin_right = 388.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 107.708, 40.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "https://github.com/ChristianLowe"
valign = 1

[node name="Label3" type="Label" parent="Tutorial Area/CenterBox/URLS"]
margin_top = 170.0
margin_right = 388.0
margin_bottom = 251.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "https://github.com/Edj209"
valign = 1

[node name="Label4" type="Label" parent="Tutorial Area/CenterBox/URLS"]
margin_top = 255.0
margin_right = 388.0
margin_bottom = 339.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
text = "https://github.com/TylerHamm"
valign = 1

[node name="LeftButton" parent="." instance=ExtResource( 4 )]
margin_left = 47.7182
margin_top = 104.014
margin_right = 122.718
margin_bottom = 169.014
rect_min_size = Vector2( 0, 0 )
icon = ExtResource( 5 )
scene_to_load = "res://scenes/TitleScreen.tscn"

[node name="Bounce" type="Tween" parent="LeftButton"]
repeat = true
playback/repeat = true

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false
rect_scale = Vector2( 2.4, 1 )
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
